# really-notify

./: Cargo.toml  README.md
examples/: config.yaml  example.rs
src/: inotify.rs  lib.rs
src/backend/: inotify.rs  mod.rs  notify.rs
